k8s/networkpolicies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: worker-deny-egress
  namespace: devops-demo
spec:
  podSelector:
    matchLabels:
      app: worker
  policyTypes:
    - Egress
  egress: []
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: worker-allow-ingress-from-security
  namespace: devops-demo
spec:
  podSelector:
    matchLabels:
      app: worker
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: security-service
      ports:
        - protocol: TCP
          port: 8003
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: security-egress-only-updater-and-worker
  namespace: devops-demo
spec:
  podSelector:
    matchLabels:
      app: security-service
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: updater-service
      ports:
        - protocol: TCP
          port: 8001
    - to:
        - podSelector:
            matchLabels:
              app: worker
      ports:
        - protocol: TCP
          port: 8003
